<resources>
    <string name="app_name">COWS</string>
    <string name="duration">Duration</string>
    <string name="water">WATER!</string>
    <string name="defaultstate">Waiting to water...</string>
    <string name="full_name">Chucky\'s Online Watering System</string>
    <string name="setup">Setup</string>
    <string name="change_wifi">Connect to the COWS wifi. Password is: cowsgomoo</string>
    <string name="scan_for_wifi">Click Configure Wifi, pick your Wifi and type in your password</string>
    <string name="ip_leadin">Enter the following:</string>
    <string name="staticIPHeader">Static IP:</string>
    <string name="defaultIP">1.1.1.1</string>
    <string name="staticGatewayHeader">Static Gateway:</string>
    <string name="subnetHeader">Subnet:</string>
    <string name="followWifiHeader">Aftering you finish reading, click the \"Log In\" below</string>
    <string name="login">Log In</string>
    <string name="subnet">255.255.255.0</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="ip_address">0.0.0.0</string>
    <string name="gateway_address">0.0.0.0</string>
    <string name="pref_file">preferences</string>
    <string name="reminder_button">Set Reminder</string>
    <string name="time">Time</string>
    <string name="interval">Interval</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="days_at">Days, at</string>
    <string name="send_reminder">Send a reminder every</string>
    <string name="reminder_toast">Reminder set!</string>
    <string name="cancel_reminder">Cancel Reminder</string>
    <string name="cancel_reminder_toast">Reminder cancelled!</string>
    <string name="channel_name">COWS Notifications</string>
    <string name="channel_description">COWS Reminder Notifications</string>
    <string name="notification_channel_id">COWSNotifications</string>
    <string name="notification_title">COWS Reminder</string>
    <string name="notification_description">Babe! Don\'t forget to water your plants!</string>
    <string name="enter_duration">Please enter a duration!</string>
    <string name="seconds">Seconds</string>
    <string name="water_for">Water for:</string>
    <string name="wifi_change_failed">Unable to connect to COWS WiFi (try restarting COWS module)</string>
</resources>